--- a/.github/workflows/CI_Pod.yml
+++ b/.github/workflows/CI_Pod.yml
@@ -13,7 +13,6 @@ env:
 
 jobs:
   test:
-    if: env.SKIP_TESTS != 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repo
@@ -25,15 +24,17 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
+        if: env.SKIP_TESTS != 'true'
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run Tests
+        if: env.SKIP_TESTS != 'true'
         run: python manage.py test
 
   build:
-    needs: [test]
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repo
